# gemini_transliteration

./: .env.example  README.md  main.py  pyproject.toml
